3.1.10
* mobs in maps shouldnt despawn anymore
* should fix party commands needing OP
* try fix party members being able to kill each other
* added new dungeon rooms
* made dungeon size random but usually smaller
3.1.9
* made parties not save on server reboot due to lag.
* fix nullp in loot gen
3.1.8
* try fix structure blocks not being activated in dungeons
* fix being able to place blocks in dungeons
* added party exp sharing if nearby
3.1.7
* make it possible to destroy graves from other mods in dungeons.
3.1.6
* nerfed boss and mythic mobs dmg a bit
* loot tweaks
* fix death not losing exp
3.1.5
* fixed each map portal having its own dungeon
* made ticks to update dungeon blocks faster
3.1.4
* fixed blink strike server crash
* fix map chest dropping itself
* made mobs scale less hard per map tier
* fix map dmg affix always generating at max value
* updated chinese lang
3.1.3
* updated chinese lang by mcfensi
* nerf to refreshing breeze and bleed mastery
3.1.2
* nerf blood mage
3.1.1
salvage fix
3.1.0
THIS UPDATE WILL BREAK SOME EXISTING ITEMS FROM OLDER SAVES. 
This is not something i do lightly, but with me starting to turn my stuff into datapacks, it's something i would have to do sooner or later. 
Better now than after people already make datapacks.

So bad news first:
* converted all my registry ids to same rules minecraft uses, which means no spaces and all lowercase., this might break some stats on old items, sorry! 
For example Physical Damage had id of "damage_flat" but the actual stat is called "physical_damage". So if you wanted to add the stat, you'd use "physical_damage_flat" but it wouldn't work.
Now it should work fine as long as you know the correct stat name and prefix/suffix combos. You can do high_physical_damage_flat, low_physical_damage_flat etc.
The bad news for users is that a lot of items will either break, like plate armors. Or have invalid affixes/chaos stats/primary stats etc. I suggest a new world.